--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1",
     "vite": "^2.0.0-beta.48"
   }
 }
